--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,5 +1,5 @@
 #ft1fondo{
-    background-color: darkgreen;
+    background-color: #00FF7F;
     color: white;
     padding: 30px 30px 30px 30px;
 }
