--- a/css/estilo.css
+++ b/css/estilo.css
@@ -132,6 +132,11 @@
         width: 101%;
     }
 }
+@media only screen and (max-width: 700px) {
+    #TallosFot44 {
+        width: 60%;
+    }
+}
 
 
 #Planta1Fot44{
