--- a/css/estilo.css
+++ b/css/estilo.css
@@ -122,40 +122,7 @@
     position: relative;
     display: inline-block;
 }
-#TallosFot44{
-    position: absolute;
-    top: 50%;
-    left: 12%;
-}
-@media only screen and (max-width: 1300px) {
-    #TallosFot44 {
-        width: 101%;
-    }
-}
-@media only screen and (max-width: 700px) {
-    #TallosFot44 {
-        width: 60%;
-    }
-}
 
-
-#Planta1Fot44{
-    position: absolute;
-    top: 35%;
-    left: 37%;
-    z-index: 2;
-}
-#Planta2Fot44{
-    position: absolute;
-    top: 13.5%;
-    left: 45%;
-    z-index: 1;
-}
-#Planta3AFot44{
-    position: absolute;
-    top: 53%;
-    left: 20%;
-}
 
 #micanvas{
     border: solid 1px blue;
@@ -169,19 +136,25 @@
     }
 }
 */
+#contra img{
+
+}
+#Planta1Fot4{
+    position: absolute;
+    max-width: 100%;
+    top: 34.5%;
+    left: 35.5%;
+    z-index: 2;
+}
 
 #TallosFot4{
     position: absolute;
+    max-width: 100%;
     top: 50%;
-    left: 25%;
+    left: 11%;
 }
 
-#Planta1Fot4{
-    position: absolute;
-    top: 35%;
-    left: 46%;
-    z-index: 2;
-}
+
 #Planta2Fot4{
     position: absolute;
     top: 16%;
