--- a/css/estilo.css
+++ b/css/estilo.css
@@ -137,11 +137,8 @@
 }
 */
 #contra{
-    padding: 1.5rem;
-    margin-right: 0;
-    margin-left: 0;
-    border-width: .2rem;
-    display: block;
+    max-width: 100%;
+    max-height: 100%;
 }
 #TallosFot4{
     position:absolute;
