--- a/css/estilo.css
+++ b/css/estilo.css
@@ -142,6 +142,21 @@
     max-width: 100%;
     margin: 0 auto;
 }
+@media only screen and (max-width: 700px) {
+    #contra {
+        background-color: blueviolet;
+        width: 20%;
+        height: 20%;
+    }
+    #TallosFot4{
+        left:11%;
+        top:60%;
+        max-width: 40%;
+    }
+    #Planta1Fot4{
+        max-width: 40%;
+    }
+}
 #TallosFot4{
     display: inline-block;
     position:absolute;
