--- a/css/estilo.css
+++ b/css/estilo.css
@@ -196,35 +196,32 @@
     left:35%;
     top:30%;
     max-width: 80%;
-    /*
-    position: absolute;
-    top: 34.5%;
-    left: 35.5%;
     z-index: 2;
-     */
 }
 #Planta2Fot4{
     position: absolute;
-    top: 16%;
-    left: 52%;
+    top: 11.5%;
+    left: 41.5%;
+    max-width: 80%;
     z-index: 1;
 }
 #Planta3AFot4{
     position: absolute;
-    top: 53%;
-    left: 31.6%;
+    top: 49.7%;
+    left: 18.5%;
+    z-index: 1;
 }
 #Planta3BFot4{
     position: absolute;
-    top: 70%;
-    left: 47%;
-    z-index: -1;
+    top: 65.5%;
+    left: 13.7%;
+    z-index: 1;
 }
 #Planta4AFot4{
     position: absolute;
-    top: 70.3%;
-    left: 78.7%;
-    z-index: -1;
+    top: 66%;
+    left: 67%;
+    z-index: 1;
 }
 
 
