--- a/css/estilo.css
+++ b/css/estilo.css
@@ -62,7 +62,14 @@
     }
 }
 
-
+main div {
+    scroll-snap-align: start;
+}
+#mainconta{
+    overflow: auto;
+    scroll-snap-type: y mandatory;
+    height: 100%;
+}
 .grid-container{
     display: grid;
     grid-template-columns: 1020px;
