--- a/css/estilo.css
+++ b/css/estilo.css
@@ -65,6 +65,12 @@
 main div {
     scroll-snap-align: start;
 }
+
+main{
+    height: 100%;
+    overflow: auto;
+    scroll-snap-type: y mandatory;
+}
 #mainconta{
     overflow: auto;
     scroll-snap-type: y mandatory;
