--- a/css/estilo.css
+++ b/css/estilo.css
@@ -51,16 +51,25 @@
 }
 /* Para 480px */
 @media only screen and (max-width: 500px) and (min-width: 341px) {
-    #contra{
+    .grid-sub-container{
         background-color: green;
     }
 }
 /* Para 320px */
 @media only screen and (max-width: 340px) and (min-width: 5px)  {
-    #contra{
+    .grid-sub-container{
         background-color: pink;
     }
 }
+
+/*
+.grid-sub-container{
+    display: grid;
+    grid-template-columns: 510px 510px;
+    justify-content: center;
+    background-color: blueviolet;
+}
+ */
 
 main div {
     scroll-snap-align: start;
