--- a/css/estilo.css
+++ b/css/estilo.css
@@ -52,9 +52,9 @@
 /* Para 480px */
 @media only screen and (max-width: 500px) and (min-width: 341px) {
     .grid-sub-container{
-        display: grid;
-        grid-template-columns: 480px;
-        justify-content: center;
+        display: grid !important;
+        grid-template-columns: 480px !important;
+        justify-content: center !important;
         background-color: green !important;
     }
 }
