--- a/css/estilo.css
+++ b/css/estilo.css
@@ -58,6 +58,9 @@
 @media only screen and (max-width: 500px) and (min-width: 341px) {
     .grid-sub-container{
         background-color: green !important;
+        display: grid;
+        grid-template-columns: 490px;
+        justify-content: center;
     }
 
     /*
