--- a/css/estilo.css
+++ b/css/estilo.css
@@ -18,7 +18,7 @@
      */
 }
 .textoCudadrado{
-    font-family: "Open Sans";
+    font-family: "Ludka Biniek";
     font-size: 9pt;
 }
 .tituloCuadrado{
