--- a/css/estilo.css
+++ b/css/estilo.css
@@ -55,7 +55,11 @@
 @media only screen and (max-width: 980px) and (min-width: 821px) {
     .grid-sub-container{
         background-color: purple !important;
-    }
+        display: grid !important;
+        grid-template-columns: 480px 480px !important;
+        justify-content: center !important;
+
+ }
 }
 /* Para 800px */
 @media only screen and (max-width: 820px) and (min-width: 621px) {
@@ -79,7 +83,7 @@
         background-color: green !important;
          */
         display: grid !important;
-        grid-template-columns: 800px !important;
+        grid-template-columns: 490px !important;
         justify-content: center !important;
     }
     #idInicio{
