--- a/css/estilo.css
+++ b/css/estilo.css
@@ -54,12 +54,14 @@
 /* Para 960px */
 @media only screen and (max-width: 980px) and (min-width: 821px) {
     .grid-sub-container{
-        background-color: purple !important;
-        display: grid !important;
-        grid-template-columns: 480px 480px !important;
-        justify-content: center !important;
-
- }
+    /* background-color: purple !important; */
+    display: grid !important;
+    grid-template-columns: 460px 460px !important;
+    justify-content: center !important;
+}
+.grid-container{
+    max-width: 920px !important;
+}
 }
 /* Para 800px */
 @media only screen and (max-width: 820px) and (min-width: 621px) {
