--- a/css/estilo.css
+++ b/css/estilo.css
@@ -58,15 +58,21 @@
     display: grid !important;
     grid-template-columns: 460px 460px !important;
     justify-content: center !important;
-}
-.grid-container{
-    max-width: 920px !important;
-}
+    }
+    .grid-container{
+        max-width: 920px !important;
+    }
 }
 /* Para 800px */
 @media only screen and (max-width: 820px) and (min-width: 621px) {
     .grid-sub-container{
-        background-color: red !important;
+        /* background-color: red !important; */
+        display: grid !important;
+        grid-template-columns: 380px 380px !important;
+        justify-content: center !important;
+    }
+    .grid-container{
+        max-width: 760px !important;
     }
 }
 
