--- a/css/estilo.css
+++ b/css/estilo.css
@@ -44,17 +44,16 @@
 */
 /* Para px */
 @media only screen and (max-width: 1500px) and (min-width: 981px) {
-    /*
-    ***************************************************************************
+
     .grid-sub-container{
         background-color: orange !important;
     }
-     */
+
 }
 /* Para 960px */
 @media only screen and (max-width: 980px) and (min-width: 821px) {
     .grid-sub-container{
-    /* background-color: purple !important; */
+    background-color: purple !important;
     display: grid !important;
     grid-template-columns: 460px 460px !important;
     justify-content: center !important;
@@ -66,7 +65,7 @@
 /* Para 800px */
 @media only screen and (max-width: 820px) and (min-width: 621px) {
     .grid-sub-container{
-        /* background-color: red !important; */
+        background-color: red !important;
         display: grid !important;
         grid-template-columns: 380px 380px !important;
         justify-content: center !important;
